[package]
name = "USMM"
version = "0.1.5"
edition = "2024"
author = "Momo-AUX1"

[dependencies]
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
sdl2 = "0.37.0"
configparser = "3.0.5"
rfd = "0.15.3"
toml = "0.7"
chrono = "0.4.41"

[features]
default = ["gl_profile_opengl"]
gl_profile_gles = []
gl_profile_opengl = []
embed_dll = []