[package]
name = "USMM"
version = "0.4.5"
edition = "2024"
authors = ["Momo-AUX1"]

[dependencies]
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
sdl2 = { version = "0.37.0", features = ["image"] }
configparser = "3.0.5"
rfd = "0.15.3"
toml = "0.7"
chrono = "0.4.41"
zip = "4.0.0"
uuid = { version = "1.17.0", features = ["v4"] }
image = "0.25.1"

[patch.crates-io]
imgui-glow-renderer = { path = "vendor/imgui_glow_renderer" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
once_cell = "1.17.1"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlInputElement",
  "FileReader",
  "File",          
  "Event",        
  "ProgressEvent", 
]


[features]
default = ["gl_profile_es"]
gl_profile_es = []
gl_profile_core = []
xbox_build = []
